Adding endpoint that integrates with gpt chat and returns the response to the UI

--- a/SpellChecker/SpellCheckerAI/SpellCheckerAI.Server/SpellCheckerAI.Server.csproj
+++ b/SpellChecker/SpellCheckerAI/SpellCheckerAI.Server/SpellCheckerAI.Server.csproj
@@ -7,6 +7,7 @@
     <SpaRoot>..\spellcheckerai.client</SpaRoot>
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
     <SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
+    <UserSecretsId>34f5c5cd-66ee-46c7-a5a5-7f3cf8687a92</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +15,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
