--- a/SpellChecker/SpellCheckerAI/SpellCheckerAI.Server/appsettings.json
+++ b/SpellChecker/SpellCheckerAI/SpellCheckerAI.Server/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ChatGpt": {
+    "ApiUrl": "https://api.openai.com",
+    "ApiSecret": ""
+  }
 }
